tests/no_compile/inner_array_safe_unchecked.stderr
error[E0133]: call to unsafe function `MmioUart::<'_>::array_shared_unchecked` is unsafe and requires unsafe function or block
  --> tests/no_compile/inner_array_safe_unchecked.rs:32:23
   |
32 |     let _inner_bank = mmio_uart.array_shared_unchecked(5);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function `MmioUart::<'_>::array_unchecked` is unsafe and requires unsafe function or block
  --> tests/no_compile/inner_array_safe_unchecked.rs:34:23
   |
34 |     let _inner_bank = mmio_uart.array_unchecked(5);
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
